--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,18 @@
 		<java.version>11</java.version>
 	</properties>
 	<dependencies>
+			<dependency>
+    			<groupId>org.apache.maven</groupId>
+    			<artifactId>apache-maven</artifactId>
+    			<version>3.0.5</version>
+    			<type>pom</type>
+		</dependency>
+
+                <dependency>
+                       <groupId>org.apache.maven.plugins</groupId>
+                       <artifactId>maven-resources-plugin</artifactId>
+                       <version>3.2.0</version>
+                </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
